--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,11 @@
   --purple-500: #5d5fef;
 }
 
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--purple-500);
+}
+
 * {
   margin: 0;
   padding: 0;
