--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -116,3 +116,7 @@
 .commentForm > footer button[type="submit"]:hover {
   background: var(--purple-300);
 }
+
+.commentList {
+  margin-top: 2rem;
+}
