--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -105,8 +105,13 @@
   transition: background-color 0.1s;
 }
 
-.commentForm > footer button[type="submit"]:hover {
+.commentForm > footer button[type="submit"]:not(:disabled):hover {
   background: var(--purple-300);
+}
+
+.commentForm button[type="submit"]:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 .commentList {
